feat: Add pre-compiled CSS files and improve documentation
- Add build.py script to compile CSS from Python
- Generate dist/kardocss.css (31.5 KB) and dist/kardocss.min.css (24.7 KB)
- Update .gitignore to include pre-compiled CSS files
- Update README.md with CDN links and download options
- Add INSTALLATION.md with comprehensive usage guide
- Update examples/index.html to use CDN
- Add support for direct usage without Python installation

--- a/.gitignore
+++ b/.gitignore
@@ -54,11 +54,19 @@ ENV/
 Thumbs.db
 
 # KardoCSS specific
-*.css.map
-/dist/
+# Permitir archivos CSS pre-compilados en dist/
+!dist/kardocss.css
+!dist/kardocss.min.css
+
+# Ignorar otros archivos en dist/
+dist/*.whl
+dist/*.tar.gz
+dist/*.egg
+
+# Ignorar CSS compilado en otros lugares
 /compiled/
-*.min.css
 /examples/compiled/
+*.css.map
 
 # Documentation
 /docs/_build/
